--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "plugins/debug_kit"]
 	path = plugins/debug_kit
 	url = https://github.com/cakephp/debug_kit.git
+[submodule "plugins/interactive"]
+	path = plugins/interactive
+	url = https://github.com/mcurry/interactive.git
+
